<?xml version="1.0" encoding="utf-8"?>
<!-- Main ConstraintLayout for MainActivity -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F8"
    tools:context=".MainActivity">

    <!-- Centered Application Name -->
    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#6A1B9A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp" />

    <!-- Name -->
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Name EditText -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="305dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_hint"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toTopOf="@+id/nameTextView" />

    <!-- Email -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="306dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toTopOf="@+id/emailTextView" />

    <!-- Phone -->
    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Phone EditText -->
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_hint"
        android:autofillHints="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/phoneTextView"
        app:layout_constraintTop_toTopOf="@+id/phoneTextView" />

    <!-- Address -->
    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Address EditText -->
    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/address_hint"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toEndOf="@+id/addressTextView"
        app:layout_constraintTop_toTopOf="@+id/addressTextView" />

    <!-- Skills -->
    <TextView
        android:id="@+id/skillsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Skills EditText -->
    <EditText
        android:id="@+id/skillsEditText"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/skills_hint"
        android:autofillHints="skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toEndOf="@+id/skillsTextView"
        app:layout_constraintTop_toTopOf="@+id/skillsTextView" />

    <!-- About -->
    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillsEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- About EditText -->
    <EditText
        android:id="@+id/aboutEditText"
        android:layout_width="312dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:lines="3"
        android:hint="@string/about_hint"
        android:autofillHints="about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/aboutTextView"
        app:layout_constraintTop_toTopOf="@+id/aboutTextView" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#6A1B9A"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutEditText" />

    <!-- Social Media Links Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="418dp"
        android:layout_height="218dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/githubTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.0">

        <!-- Placeholder for empty about TextView -->
        <TextView
            android:id="@+id/emptyAboutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_about"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- GitHub Link TextView -->
    <TextView
        android:id="@+id/githubTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_link"
        android:textColor="@color/link_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        android:clickable="true"
        android:focusable="true" />

    <!-- WebView for GitHub profile -->
    <WebView
        android:id="@+id/githubWebView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
